# python-mcp-playing

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/: theme_toggle_server.py
tests/: test_theme_toggle.py
